# mars

./: .gitignore  Cargo.toml  README.md
.github/workflows/: engine-perf-gate.yml
benches/: README.md
benches/budgets/: macos-15.json
bundles/mars.driver/Contents/: Info.plist
crates/mars-audio-tap/: Cargo.toml  build.rs
crates/mars-audio-tap/src/: lib.rs  tap_bridge.m
crates/mars-cli/: Cargo.toml
crates/mars-cli/src/: main.rs  test_command.rs
crates/mars-coreaudio/: Cargo.toml
crates/mars-coreaudio/src/: lib.rs
crates/mars-daemon/: Cargo.toml
crates/mars-daemon/benches/: capture_render.rs  capture_runtime.rs  daemon_ipc_shm.rs  sink_runtime.rs
crates/mars-daemon/src/: capture_runtime.rs  lib.rs  render_qos.rs  sink_runtime.rs  tests.rs
crates/mars-daemon/tests/: render_loop.rs  rt_alloc_sink.rs
crates/mars-engine/: Cargo.toml
crates/mars-engine/benches/: engine.rs  plugin_host.rs
crates/mars-engine/src/: au_host.rs  lib.rs
crates/mars-engine/tests/: perf_gate.rs  rt_alloc.rs  soak.rs
crates/mars-graph/: Cargo.toml
crates/mars-graph/benches/: graph.rs
crates/mars-graph/src/: lib.rs
crates/mars-hal/: Cargo.toml  build.rs
crates/mars-hal-client/: Cargo.toml  build.rs
crates/mars-hal-client/src/: bindings.rs  lib.rs
crates/mars-hal/benches/: ring_buffer.rs
crates/mars-hal/src/: coreaudio_types.rs  lib.rs  plugin.rs  plugin_tests.rs  shm_backend.rs
crates/mars-hal/tests/: rt_alloc_io.rs
crates/mars-ipc/: Cargo.toml
crates/mars-ipc/src/: lib.rs
crates/mars-plugin-host/: Cargo.toml
crates/mars-plugin-host/src/: main.rs
crates/mars-profile/: Cargo.toml
crates/mars-profile/benches/: profile.rs
crates/mars-profile/src/: lib.rs
crates/mars-sdk/: Cargo.toml
crates/mars-sdk/examples/: status.rs  virtual_mic_producer.rs  virtual_mic_reader.rs
crates/mars-sdk/src/: lib.rs  runtime.rs  virtual_input.rs
crates/mars-shm/: Cargo.toml
crates/mars-shm/src/: lib.rs
crates/mars-telemetry/: Cargo.toml
crates/mars-telemetry/src/: lib.rs
crates/mars-types/: Cargo.toml
crates/mars-types/src/: lib.rs
docs/: acceptance-hal.md  driver-compatibility-matrix.md  getting-started.md  hal-realtime-invariants.md  installer-embedding.md  operator-guide.md  performance-gates.md  sdk.md  shm-design.md  shm-security.md  telemetry.md  troubleshooting.md
docs/reports/: 2026-06-12-perf-audit-and-downstream-roadmap.md
launchd/: com.mars.marsd.plist
scripts/: build-driver.sh  dev-run.sh  install.sh  logs.sh  package-runtime.sh  uninstall.sh
scripts/acceptance/: hal-virtual-input.sh  shm-cross-user.sh
scripts/bench/: collect.py  test_non_finite.sh  verify.py  verify.sh
