[workspace]
members = [
  "crates/mars-types",
  "crates/mars-profile",
  "crates/mars-graph",
  "crates/mars-shm",
  "crates/mars-engine",
  "crates/mars-coreaudio",
  "crates/mars-ipc",
  "crates/mars-daemon",
  "crates/mars-cli",
  "crates/mars-hal",
  "crates/mars-hal-client",
  "crates/mars-audio-tap",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/jacoblincool/mars"
authors = ["MARS Contributors"]
rust-version = "1.87"

[workspace.dependencies]
anyhow = "1.0"
arc-swap = "1.7"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
cpal = "0.17"
dashmap = "6.1"
dirs = "6.0"
once_cell = "1.20"
parking_lot = "0.12"
petgraph = "0.8"
regex = "1.11"
schemars = { version = "1", features = ["chrono04"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "2.0"
tokio = { version = "1.43", features = ["rt-multi-thread", "macros", "net", "io-util", "time", "sync", "signal", "process", "fs"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
uuid = { version = "1.12", features = ["v4", "serde"] }
criterion = { version = "0.8", features = ["html_reports"] }

[workspace.lints.rust]
missing_debug_implementations = "warn"
unused_must_use = "deny"

[workspace.lints.clippy]
panic = "warn"
unwrap_used = "warn"
expect_used = "warn"
