[package]
name = "mars-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[[bin]]
name = "mars"
path = "src/main.rs"

[dependencies]
clap.workspace = true
dirs.workspace = true
mars-ipc = { path = "../mars-ipc" }
mars-profile = { path = "../mars-profile" }
mars-types = { path = "../mars-types" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
