[package]
name = "mars-coreaudio"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
cpal.workspace = true
mars-types = { path = "../mars-types" }
regex.workspace = true
thiserror.workspace = true
