[package]
name = "mars-daemon"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[[bin]]
name = "marsd"
path = "src/bin/marsd.rs"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
clap.workspace = true
dirs.workspace = true
mars-coreaudio = { path = "../mars-coreaudio" }
mars-engine = { path = "../mars-engine" }
mars-graph = { path = "../mars-graph" }
mars-hal = { path = "../mars-hal" }
mars-hal-client = { path = "../mars-hal-client" }
mars-ipc = { path = "../mars-ipc" }
mars-profile = { path = "../mars-profile" }
mars-shm = { path = "../mars-shm" }
mars-types = { path = "../mars-types" }
once_cell.workspace = true
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
