[package]
name = "mars-engine"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
arc-swap.workspace = true
mars-graph = { path = "../mars-graph" }
mars-types = { path = "../mars-types" }
parking_lot.workspace = true
thiserror.workspace = true

[dev-dependencies]
criterion.workspace = true
stats_alloc = "0.1.10"

[[bench]]
name = "engine"
harness = false
