[package]
name = "mars-hal-client"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
mars-hal = { path = "../mars-hal" }
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
