[package]
name = "mars-ipc"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
default = []
otel = ["mars-telemetry/otel"]

[dependencies]
async-trait.workspace = true
mars-types = { path = "../mars-types" }
mars-telemetry = { path = "../mars-telemetry" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
