[package]
name = "mars-plugin-host"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
default = []
otel = ["mars-telemetry/otel"]

[dependencies]
mars-telemetry = { path = "../mars-telemetry" }
mars-types = { path = "../mars-types" }
serde.workspace = true
serde_json.workspace = true
