[package]
name = "mars-sdk"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Public Rust SDK for building apps and tools on top of marsd"
keywords = ["audio", "routing", "sdk", "ipc", "macos"]
categories = ["api-bindings", "multimedia::audio"]

[features]
default = ["default-socket-path"]
default-socket-path = ["dep:dirs"]

[lints]
workspace = true

[dependencies]
dirs = { workspace = true, optional = true }
mars-ipc = { path = "../mars-ipc" }
mars-types = { path = "../mars-types" }
thiserror.workspace = true

[dev-dependencies]
chrono.workspace = true
tokio.workspace = true

[[example]]
name = "status"
path = "examples/status.rs"
required-features = ["default-socket-path"]
