[package]
name = "mars-sdk"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Public Rust SDK for building apps and tools on top of marsd"
keywords = ["audio", "routing", "sdk", "ipc", "macos"]
categories = ["api-bindings", "multimedia::audio"]

[features]
default = ["default-socket-path"]
default-socket-path = ["dep:dirs"]

[lints]
workspace = true

[dependencies]
dirs = { workspace = true, optional = true }
mars-ipc = { path = "../mars-ipc" }
mars-shm = { path = "../mars-shm" }
mars-types = { path = "../mars-types" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true

[dev-dependencies]
chrono.workspace = true
cpal.workspace = true
tokio.workspace = true

[[example]]
name = "status"
path = "examples/status.rs"
required-features = ["default-socket-path"]

[[example]]
name = "virtual_mic_producer"
path = "examples/virtual_mic_producer.rs"
required-features = ["default-socket-path"]

[[example]]
name = "virtual_mic_reader"
path = "examples/virtual_mic_reader.rs"

