[package]
name = "mars-shm"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
dirs.workspace = true
mars-hal = { path = "../mars-hal" }
once_cell.workspace = true
parking_lot.workspace = true
serde_json.workspace = true
uuid.workspace = true
